--- a/find.html
+++ b/find.html
@@ -37,6 +37,26 @@
       </div>
     </div>
   </header>
+  <main class="find">
+    <section class="find__options">
+      <div class="find__option">
+        <i class="fas fa-address-book fa-lg"></i>
+        <span class="find__option-title">Find</span>
+      </div>
+      <div class="find__option">
+        <i class="fas fa-qrcode fa-lg"></i>
+        <span class="find__option-title">QR Code</span>
+      </div>
+      <div class="find__option">
+        <i class="fas fa-mobile fa-lg"></i>
+        <span class="find__option-title">Shake</span>
+      </div>
+      <div class="find__option">
+        <i class="far fa-envelope fa-lg"></i>
+        <span class="find__option-title">Invite via SMS</span>
+      </div>
+    </section>
+  </main>
   <nav class="tab-bar">
     <a href="index.html" class="tab-bar__tab">
       <i class="fas fa-user"></i>
