--- a/find.html
+++ b/find.html
@@ -56,6 +56,14 @@
         <span class="find__option-title">Invite via SMS</span>
       </div>
     </section>
+    <section class="find__recommended">
+      <header>
+        <h6 class="recommended-title">Recommended Friends</h6>
+      </header>
+      <div class="recommended-none">
+        <span class="recommended-text">You have no recommended friends.</span>
+      </div>
+    </section>
   </main>
   <nav class="tab-bar">
     <a href="index.html" class="tab-bar__tab">
