--- a/chats.html
+++ b/chats.html
@@ -41,24 +41,28 @@
     </div>
     <ul class="chats__list">
       <li class="chats__chat">
-        <div class="chat__contant">
-          <img src="images/avatar.jpg">
-          <div class="chat__preview">
-            <h3 class="chat__user">Jinnie</h3>
-            <span class="chat__last-massege">Hello! This is test massge.</span>
+        <a href="chat.html">
+          <div class="chat__contant">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">Jinnie</h3>
+              <span class="chat__last-massege">Hello! This is test massge.</span>
+            </div>
           </div>
-        </div>
-        <span class="chat__date-time">17:55</span>
+          <span class="chat__date-time">17:55</span>
+        </a>
       </li>
       <li class="chats__chat">
-        <div class="chat__contant">
-          <img src="images/avatar.jpg">
-          <div class="chat__preview">
-            <h3 class="chat__user">KakaoTalk</h3>
-            <span class="chat__last-massege">You logged into KakaoTalk PC from the PC.</span>
+        <a href="chat.html">
+          <div class="chat__contant">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">KakaoTalk</h3>
+              <span class="chat__last-massege">You logged into KakaoTalk PC from the PC.</span>
+            </div>
           </div>
-        </div>
-        <span class="chat__date-time">Jul 29</span>
+          <span class="chat__date-time">Jul 29</span>
+        </a>
       </li>
     </ul>
     <div class="chat-btn">
