--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
       </header>
       <div class="friends__section-rows">
         <div class="friends__section-row">
-          <img src="" alt="">
-          <span class="friends__section-name">Seth</span>
+          <a href="profile.html">
+            <img src="images/avatar.jpg" alt="">
+            <span class="friends__section-name">Seth</span>
+          </a>
         </div>
         <div class="friends__section-row">
           <img src="" alt="">
