--- a/find.html
+++ b/find.html
@@ -73,7 +73,7 @@
     </a>
     <a href="chats.html" class="tab-bar__tab">
       <i class="fas fa-comment"></i>
-      <span class="tab-bar_title">Chats</span>
+      <span class="tab-bar__title">Chats</span>
     </a>
     <a href="find.html" class="tab-bar__tab tab-bar__tab--selected">
       <i class="fas fa-search"></i>
