--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span class="header__text">Friends <span class="header__numbers">1</span></span>
       </div>
       <div class="header__column">
-        <i class="fas fa-cog fa-lg"></i>
+        <i class="fas fa-cog"></i>
       </div>
     </div>
   </header>
