--- a/more.html
+++ b/more.html
@@ -34,7 +34,7 @@
         <span class="header__text">Find </span>
       </div>
       <div class="header__column">
-      <i class="fas fa-cog fa-lg"></i>
+      <i class="fas fa-cog"></i>
       </div>
     </div>
   </header>
