--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
       </header>
       <div class="friends__section-rows">
         <div class="friends__section-row">
-          <a href="profile.html">
-            <img src="images/avatar.jpg" alt="">
-            <span class="friends__section-name">Seth</span>
+          <img src="images/avatar.jpg" alt="">
+          <a href="profile.html" class="friends__section-name">
+            Seth
           </a>
         </div>
         <div class="friends__section-row">
-          <img src="" alt="">
+          <img src="images/avatar.jpg" alt="">
           <span class="friends__section-name">Friends' Names Display</span>
         </div>
       </div>
@@ -65,9 +65,9 @@
         <h6 class="friends__section-title">Friends</h6>
       </header>
       <div class="friends__section-rows">
-        <div class="friends__section-row">
+        <div class="friends__section-row with-tagline">
           <div class="friends__section-column">
-            <img src="" alt="">
+            <img src="images/avatar.jpg" alt="">
             <span class="friends__section-name">Jinnie</span>
           </div>
           <span class="friends__section__tagline">
