--- a/chats.html
+++ b/chats.html
@@ -58,6 +58,126 @@
           <div class="chat__contant">
             <img src="images/avatar.jpg">
             <div class="chat__preview">
+              <h3 class="chat__user">Jinnie</h3>
+              <span class="chat__last-massege">Hello! This is test massge.</span>
+            </div>
+          </div>
+          <span class="chat__date-time">17:55</span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contant">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">Jinnie</h3>
+              <span class="chat__last-massege">Hello! This is test massge.</span>
+            </div>
+          </div>
+          <span class="chat__date-time">17:55</span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contant">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">Jinnie</h3>
+              <span class="chat__last-massege">Hello! This is test massge.</span>
+            </div>
+          </div>
+          <span class="chat__date-time">17:55</span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contant">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">Jinnie</h3>
+              <span class="chat__last-massege">Hello! This is test massge.</span>
+            </div>
+          </div>
+          <span class="chat__date-time">17:55</span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contant">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">Jinnie</h3>
+              <span class="chat__last-massege">Hello! This is test massge.</span>
+            </div>
+          </div>
+          <span class="chat__date-time">17:55</span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contant">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">Jinnie</h3>
+              <span class="chat__last-massege">Hello! This is test massge.</span>
+            </div>
+          </div>
+          <span class="chat__date-time">17:55</span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contant">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">Jinnie</h3>
+              <span class="chat__last-massege">Hello! This is test massge.</span>
+            </div>
+          </div>
+          <span class="chat__date-time">17:55</span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contant">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">Jinnie</h3>
+              <span class="chat__last-massege">Hello! This is test massge.</span>
+            </div>
+          </div>
+          <span class="chat__date-time">17:55</span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contant">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">Jinnie</h3>
+              <span class="chat__last-massege">Hello! This is test massge.</span>
+            </div>
+          </div>
+          <span class="chat__date-time">17:55</span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contant">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">Jinnie</h3>
+              <span class="chat__last-massege">Hello! This is test massge.</span>
+            </div>
+          </div>
+          <span class="chat__date-time">17:55</span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contant">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
               <h3 class="chat__user">KakaoTalk</h3>
               <span class="chat__last-massege">You logged into KakaoTalk PC from the PC.</span>
             </div>
